fixed broken safari styles
- fixed broken table style in safari
- fixed uneven margin in /quote

--- a/src/main.css
+++ b/src/main.css
@@ -293,7 +293,7 @@ table {
 	border-collapse: collapse;
 	background-color: #10151ddf;
 	font-size: 0.9em;
-	font-family: hack;
+	font-family: hack, monospace;
 	color: #CCCCCC;
 	min-width: 300px;
 	box-shadow: 0px 0px 15px 0px #070707;
@@ -302,8 +302,11 @@ table {
 	margin-top: 25px;
 	margin-bottom: 25px;
 	border-radius: 10px;
+	/* -webkit-border-radius: 10px; */
 	overflow: hidden;
 	text-align: center;
+	/* border-collapse: separate; */
+	
 }
 
 table thead tr {
@@ -311,13 +314,14 @@ table thead tr {
 	color: #ffffff;
 	text-align: left;
 	text-align: center;
+	/* border: 1px solid magenta; */
 	/* border-radius: 10px; */
 }
 
 table th,
 table td {
 	padding: 12px 15px;
-	border-radius: 10px;
+	/* border-radius: 10px; */
 }
 
 
